--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,20 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_100"
     tools:context=".view.activity.detail.DetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray_100">
-
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/gray_100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,12 +25,35 @@
             android:layout_height="48dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@color/gray_100"
+            android:background="@color/gray_000"
             android:contentDescription="@string/arrow_back"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
             app:layout_constraintStart_toStartOf="@+id/toolbar"
             app:layout_constraintTop_toTopOf="@+id/toolbar"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
+        <ImageButton
+            android:id="@+id/btnShare"
+            android:layout_width="50dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_bg_button"
+            android:contentDescription="@string/button_share"
+            app:layout_constraintEnd_toEndOf="@+id/iv_detail_img"
+            app:layout_constraintTop_toBottomOf="@+id/iv_detail_img"
+            app:srcCompat="@drawable/ic_baseline_share_24" />
+
+        <ImageView
+            android:id="@+id/iv_detail_img"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="32dp"
+            android:contentDescription="@string/detail_img_fertilizer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/textView3"
@@ -46,18 +65,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/btnBack"
             app:layout_constraintStart_toEndOf="@+id/btnBack"
             app:layout_constraintTop_toTopOf="@+id/btnBack" />
-
-        <ImageView
-            android:id="@+id/iv_detail_img"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            tools:srcCompat="@tools:sample/avatars"
-            android:contentDescription="@string/detail_img_fertilizer" />
 
         <TextView
             android:id="@+id/tv_detail_name"
@@ -71,38 +78,38 @@
             app:layout_constraintStart_toStartOf="@+id/iv_detail_img"
             app:layout_constraintTop_toBottomOf="@+id/iv_detail_img" />
 
-    <TextView
-        android:id="@+id/type_plant"
-        style="@style/textH4Black"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/plante_type_detail"
-        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />
+        <TextView
+            android:id="@+id/type_plant"
+            style="@style/textH4Black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/plante_type_detail"
+            app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
+            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />
 
-    <TextView
-        android:id="@+id/tv_detail_type_plant"
-        style="@style/textRegular2Black"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/vegetable"
-        app:layout_constraintEnd_toEndOf="@+id/type_plant"
-        app:layout_constraintStart_toStartOf="@+id/type_plant"
-        app:layout_constraintTop_toBottomOf="@+id/type_plant" />
+        <TextView
+            android:id="@+id/tv_detail_type_plant"
+            style="@style/textRegular2Black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/vegetable"
+            app:layout_constraintEnd_toEndOf="@+id/type_plant"
+            app:layout_constraintStart_toStartOf="@+id/type_plant"
+            app:layout_constraintTop_toBottomOf="@+id/type_plant" />
 
-    <TextView
-        android:id="@+id/tv_description"
-        style="@style/textH4Black"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/description_detail"
-        app:layout_constraintEnd_toEndOf="@+id/tv_detail_type_plant"
-        app:layout_constraintStart_toStartOf="@+id/tv_detail_type_plant"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_type_plant" />
+        <TextView
+            android:id="@+id/tv_description"
+            style="@style/textH4Black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/description_detail"
+            app:layout_constraintEnd_toEndOf="@+id/tv_detail_type_plant"
+            app:layout_constraintStart_toStartOf="@+id/tv_detail_type_plant"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_type_plant" />
 
         <TextView
             android:id="@+id/tv_detail_description"
@@ -118,18 +125,6 @@
             app:layout_constraintStart_toStartOf="@+id/tv_description"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"
             app:layout_constraintVertical_bias="0.015" />
-
-        <ImageButton
-            android:id="@+id/btnShare"
-            android:layout_width="50dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_bg_button"
-            app:layout_constraintEnd_toEndOf="@+id/iv_detail_img"
-            app:layout_constraintTop_toBottomOf="@+id/iv_detail_img"
-            app:srcCompat="@drawable/ic_baseline_share_24"
-            android:contentDescription="@string/button_share" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
