--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -13,26 +13,17 @@
         android:layout_height="wrap_content"
         android:background="@color/gray_100">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:background="@drawable/rounded_component"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/ivLogo"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
+            android:contentDescription="@string/logo_organeco"
             android:src="@drawable/logo_a"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.043"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/logo_organeco" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/dots_indicator"
@@ -45,6 +36,15 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:background="@drawable/rounded_component"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvHalo"
@@ -107,6 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="100dp"
+                    android:contentDescription="@string/calculator_fertilizer"
                     android:scaleType="centerCrop"
                     android:src="@drawable/img_pupuk"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -114,8 +115,7 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.49"
-                    android:contentDescription="@string/calculator_fertilizer" />
+                    app:layout_constraintVertical_bias="0.49" />
 
                 <TextView
                     android:id="@+id/tv_cal"
