--- a/app/src/main/res/layout/activity_started.xml
+++ b/app/src/main/res/layout/activity_started.xml
@@ -60,7 +60,7 @@
 
     <TextView
         android:id="@+id/descMenu4"
-        style="@style/textReguler1White"
+        style="@style/textRegular1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
