--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -102,7 +102,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="textReguler1White" parent="latoRegular">
+    <style name="textRegular1White" parent="latoRegular">
         <item name="android:textColor">@color/gray_100</item>
         <item name="android:textSize">16sp</item>
     </style>
