--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -13,6 +13,15 @@
         android:layout_height="wrap_content"
         android:background="@color/gray_100">
 
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:background="@drawable/rounded_component"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/ivLogo"
             android:layout_width="40dp"
@@ -36,15 +45,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/viewPager" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:background="@drawable/rounded_component"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvHalo"
@@ -109,7 +109,7 @@
                     android:layout_marginBottom="100dp"
                     android:contentDescription="@string/calculator_fertilizer"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/img_pupuk"
+                    android:src="@drawable/slide1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
