--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,7 +108,7 @@
                     android:layout_marginBottom="100dp"
                     android:contentDescription="@string/calculator_fertilizer"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/img_pupuk"
+                    android:src="@drawable/pupuk"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -156,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="100dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/img_pupuk"
+                    android:src="@drawable/subsidi"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
