--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,11 +46,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="36dp"
             android:text="@string/login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_about" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         <TextView
             android:id="@+id/textViewEmail"
@@ -123,15 +124,27 @@
             app:layout_constraintStart_toStartOf="@+id/edEmail"
             app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_about"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_marginStart="176dp"
-            android:layout_marginTop="-20dp"
-            android:src="@drawable/elips"
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="136dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon_apk" />
+
+        <TextView
+            android:id="@+id/textView30"
+            style="@style/textH1Black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/organeco"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
