--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -17,4 +17,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_bookmark" />
+
+    <ImageView
+        android:id="@+id/ivNotFound"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/no_results"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        style="@style/textRegular4Black"
+        android:id="@+id/tvNotFound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_data"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/ivNotFound"
+        app:layout_constraintStart_toStartOf="@+id/ivNotFound"
+        app:layout_constraintTop_toBottomOf="@+id/ivNotFound" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
